force-app/main/default/objects/KBCard__c/KBCard__c.object-meta.xml
<CustomObject>
    <description>KanBan cards for making program, projects, epics, features, &amp; user stories</description>
    <label>KBCard</label>
    <nameField>
        <label>KBCard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KBCards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>