force-app/main/default/objects/KBCard__c/fields/Change_Log_Entry__c.field-meta.xml
<CustomField>
    <fullName>Change_Log_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Log Entry</label>
    <referenceTo>Change_Log__c</referenceTo>
    <relationshipLabel>KBCards</relationshipLabel>
    <relationshipName>KBCards</relationshipName>
    <type>Lookup</type>
</CustomField>