force-app/main/default/objects/KBCard__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imo Enterprises (IE)</fullName>
                <default>true</default>
                <label>Imo Enterprises (IE)</label>
            </value>
            <value>
                <fullName>Imo Apartments (LL)</fullName>
            </value>
            <value>
                <fullName>Imo Ice Cream &amp; Goods (IG)</fullName>
            </value>
            <value>
                <fullName>Imo Coffee &amp; Bookstore (CB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>