force-app/main/default/objects/KBCard__c/fields/Hierarchy_Sort_Number__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Sort_Number__c</fullName>
    <label>Hierarchy Sort Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>