force-app/main/default/objects/KBCard__c/fields/HierarchyCapability__c.field-meta.xml
<CustomField>
    <fullName>HierarchyCapability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hierarchy Capability</label>
    <referenceTo>KBCard__c</referenceTo>
    <relationshipLabel>KBCards (Hierarchy Capability)</relationshipLabel>
    <relationshipName>KBCardsCapability</relationshipName>
    <type>Lookup</type>
</CustomField>