force-app/main/default/objects/KBCard__c/fields/HierarchyEpic__c.field-meta.xml
<CustomField>
    <fullName>HierarchyEpic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hierarchy Epic</label>
    <referenceTo>KBCard__c</referenceTo>
    <relationshipLabel>KBCards (Hierarchy Epic)</relationshipLabel>
    <relationshipName>KBCardsEpic</relationshipName>
    <type>Lookup</type>
</CustomField>