force-app/main/default/objects/KBCard__c/fields/HierarchyFeature__c.field-meta.xml
<CustomField>
    <fullName>HierarchyFeature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hierarchy Feature</label>
    <referenceTo>KBCard__c</referenceTo>
    <relationshipLabel>KBCards (Hierarchy Feature)</relationshipLabel>
    <relationshipName>KBCardsFeature</relationshipName>
    <type>Lookup</type>
</CustomField>