force-app/main/default/objects/KBCard__c/fields/HierarchyPath__c.field-meta.xml
<CustomField>
    <fullName>HierarchyPath__c</fullName>
    <label>Hierarchy Path</label>
    <length>55</length>
    <type>Text</type>
</CustomField>