force-app/main/default/objects/KBCard__c/fields/HierarchyProgram__c.field-meta.xml
<CustomField>
    <fullName>HierarchyProgram__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hierarchy Program</label>
    <referenceTo>KBCard__c</referenceTo>
    <relationshipLabel>KBCards (HierarchyProgram)</relationshipLabel>
    <relationshipName>KBCardsProgram</relationshipName>
    <type>Lookup</type>
</CustomField>