force-app/main/default/objects/KBCard__c/fields/HierarchyProject__c.field-meta.xml
<CustomField>
    <fullName>HierarchyProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hierarchy Project</label>
    <referenceTo>KBCard__c</referenceTo>
    <relationshipLabel>KBCards (Hierarchy Project)</relationshipLabel>
    <relationshipName>KBCardsProject</relationshipName>
    <type>Lookup</type>
</CustomField>