force-app/main/default/objects/KBCard__c/fields/HierarchySort__c.field-meta.xml
<CustomField>
    <fullName>HierarchySort__c</fullName>
    <formula>If( RecordType.Name =='Program',  KBCExtID__c, HierarchyProgram__r.KBCExtID__c) +
        If( RecordType.Name =='Project',  KBCExtID__c, HierarchyProject__r.KBCExtID__c) +
        If( RecordType.Name =='Capability',  KBCExtID__c, HierarchyCapability__r.KBCExtID__c) +
        If( RecordType.Name =='Epic',  KBCExtID__c, HierarchyEpic__r.KBCExtID__c ) +
        If( RecordType.Name =='Feature',  KBCExtID__c, HierarchyFeature__r.KBCExtID__c) +
        If( RecordType.Name =='Story',  KBCExtID__c,'')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarchy Sort</label>
    <type>Text</type>
</CustomField>