force-app/main/default/objects/KBCard__c/fields/KBCAN__c.field-meta.xml
<CustomField>
    <fullName>KBCAN__c</fullName>
    <description>KBCard Auto Number</description>
    <displayFormat>{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>KBCAN</label>
    <type>AutoNumber</type>
</CustomField>