force-app/main/default/objects/KBCard__c/fields/KBCard_ID__c.field-meta.xml
<CustomField>
    <fullName>KBCard_ID__c</fullName>
    <formula>CASE( RecordType.Name , &quot;Program&quot;, &quot;PRG&quot;, &quot;Project&quot;, &quot;PRJ&quot;, &quot;Capability&quot;, &quot;CAP&quot;, &quot;Epic&quot;, &quot;EPC&quot;, &quot;Feature&quot;, &quot;FEA&quot;, &quot;Story&quot;, &quot;STO&quot; ,&quot;&quot;)  +   KBCAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KBCard ID</label>
    <type>Text</type>
</CustomField>