force-app/main/default/objects/KBCard__c/fields/KBCExtID__c.field-meta.xml
<CustomField>
    <fullName>KBCExtID__c</fullName>
    <label>KBCExtID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>