force-app/main/default/objects/KBCard__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>CASE(  RecordType.Name  , &quot;Program&quot;, 1, &quot;Project&quot;, 2, &quot;Capability&quot;, 3, &quot;Epic&quot;, 4, &quot;Feature&quot;, 5, &quot;Story&quot;, 6, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>