force-app/main/default/objects/KBCard__c/fields/Level_Number__c.field-meta.xml
<CustomField>
    <fullName>Level_Number__c</fullName>
    <label>Level Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>