force-app/main/default/objects/KBCard__c/fields/Parent_Level_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Parent_Level_Allowed__c</fullName>
    <formula>Level__c  - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Level Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>