force-app/main/default/objects/KBCard__c/fields/ParentKBCard__c.field-meta.xml
<CustomField>
    <fullName>ParentKBCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent KBCard</label>
    <referenceTo>KBCard__c</referenceTo>
    <relationshipLabel>Child KBCards</relationshipLabel>
    <relationshipName>KBCards</relationshipName>
    <type>Lookup</type>
</CustomField>