force-app/main/default/objects/KBCard__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Backlog</fullName>
            </value>
            <value>
                <fullName>2-In Progress</fullName>
            </value>
            <value>
                <fullName>3-Completed</fullName>
            </value>
            <value>
                <fullName>4-Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>