force-app/main/default/objects/KBCard__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Business Plan</fullName>
            </value>
            <value>
                <fullName>Site Build</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>Operating Documents</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>