force-app/main/default/objects/KBCard__c/recordTypes/Capability.recordType-meta.xml
<RecordType>
    <fullName>Capability</fullName>
    <active>true</active>
    <label>Capability</label>
</RecordType>