force-app/main/default/objects/KBCard__c/recordTypes/Story.recordType-meta.xml
<RecordType>
    <fullName>Story</fullName>
    <active>true</active>
    <label>Story</label>
</RecordType>