force-app/main/default/objects/KBCard__c/validationRules/ParentRequiredOnAllExceptProgram.validationRule-meta.xml
<ValidationRule>
    <fullName>ParentRequiredOnAllExceptProgram</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name &lt;&gt; &apos;Program&apos;  &amp;&amp;   ParentKBCard__c == null</errorConditionFormula>
    <errorMessage>All record types except for Program must have a Parent KBCard</errorMessage>
</ValidationRule>