force-app/main/default/objects/KBCard__c/validationRules/Program_Highest_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Highest_Level</fullName>
    <active>true</active>
    <description>Program record types can&apos;t have a parent.  They are at the highest level.</description>
    <errorConditionFormula>RecordType.Name = &quot;Program&quot;  &amp;&amp;  NOT ISNULL( ParentKBCard__c )</errorConditionFormula>
    <errorDisplayField>ParentKBCard__c</errorDisplayField>
    <errorMessage>Program record types can&apos;t have a parent.  They are at the highest level.</errorMessage>
</ValidationRule>