force-app/main/default/objects/KBCard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Level__c</columns>
    <columns>KBCard_ID__c</columns>
    <columns>KBCExtID__c</columns>
    <columns>Entity__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>