force-app/main/default/objects/KBCard__c/listViews/Hierarchy_Sort.listView-meta.xml
<ListView>
    <fullName>Hierarchy_Sort</fullName>
    <columns>LineDisplay__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>KBCExtID__c</columns>
    <columns>KBCard_ID__c</columns>
    <columns>Level_Number__c</columns>
    <columns>Hierarchy_Sort_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>Hierarchy Sort</label>
</ListView>