force-app/main/default/objects/KBCard__c/listViews/Programs.listView-meta.xml
<ListView>
    <fullName>Programs</fullName>
    <columns>KBCExtID__c</columns>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>KBCard__c.Program</value>
    </filters>
    <label>1-Programs</label>
</ListView>