force-app/main/default/objects/KBCard__c/listViews/Projects.listView-meta.xml
<ListView>
    <fullName>Projects</fullName>
    <columns>KBCard_ID__c</columns>
    <columns>KBCExtID__c</columns>
    <columns>Entity__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ParentKBCard__c</field>
        <operation>equals</operation>
        <value>SFLL</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>KBCard__c.Project</value>
    </filters>
    <label>2-Projects</label>
</ListView>