force-app/main/default/objects/KBCard__c/listViews/Stories.listView-meta.xml
<ListView>
    <fullName>Stories</fullName>
    <columns>KBCard_ID__c</columns>
    <columns>KBCExtID__c</columns>
    <columns>NAME</columns>
    <columns>ParentKBCard__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>KBCard__c.Story</value>
    </filters>
    <filters>
        <field>ParentKBCard__c</field>
        <operation>contains</operation>
    </filters>
    <label>6-Stories</label>
</ListView>