force-app/main/default/objects/KBCard__c/listViews/Story_Kanban.listView-meta.xml
<ListView>
    <fullName>Story_Kanban</fullName>
    <columns>KBCard_ID__c</columns>
    <columns>KBCExtID__c</columns>
    <columns>NAME</columns>
    <columns>ParentKBCard__c</columns>
    <columns>Change_Log_Entry__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>KBCard__c.Story</value>
    </filters>
    <label>Story Kanban</label>
</ListView>